# cg

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/dcel/: CELLtest.cpp  CMakeLists.txt
examples/skipquadtree/: CMakeLists.txt  skipquadtree.cpp
include/cg/structures/: kirkpatrickLinesByPoint.h  skipquadtree.h
polarnick/: CMakeLists.txt  Makefile  cmake_install.cmake
polarnick/quadtree/: CMakeLists.txt  Makefile  cmake_install.cmake  quadtree.cpp  skipquadtree.cpp  skipquadtree.hpp  skipquadtree2.cpp  skipquadtreevizualization.cpp
tests/: CMakeLists.txt  random_utils.h  skipquadtree.cpp
